--- a/index.html
+++ b/index.html
@@ -1,28 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Snapdragon</title>
-		<link rel="stylesheet" href="styles.css">
-		<script src="tracking.js"></script>
-	</head>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Snapdragon</title>
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="tracking.js"></script>
+  </head>
+  
+  <body>
+    <section id="snap">
+      <button id="upload">Upload Photo</button>
+      <button id="camera">Take Photo</button>
+    </section>
 
-	<body>
-		<header>Snapdragon</header>
+    <section id="track">
+      <div class="demo-container">
+        <img id="img" src="psmove.png" />
+      </div>
+    </section>
 
-		<!--APP BEGINS HERE-->
-		<section id="snap">
-			<button id="upload">Upload Photo</button>
-			<button id="camera">Take Photo</button>
-		</section>
+    <section id="drag">
+      <img src="http://via.placeholder.com/700x400">
+    </section>
 
-		<section id="track">
-			<img src="http://via.placeholder.com/700x400">
-		</section>
+    <script>
+      window.onload = function() {
+        var img = document.getElementById('img');
+        var demoContainer = document.querySelector('.demo-container');
 
-		<section id="drag">
-			<img src="http://via.placeholder.com/700x400">
-		</section>
-		<!--APP ENDS HERE-->
-	</body>
+        var tracker = new tracking.ColorTracker(['magenta', 'cyan', 'yellow']);
+
+        tracker.on('track', function(event) {
+          event.data.forEach(function(rect) {
+            window.plot(rect.x, rect.y, rect.width, rect.height, rect.color);
+          });
+        });
+
+        tracking.track('#img', tracker);
+
+        window.plot = function(x, y, w, h, color) {
+          var rect = document.createElement('div');
+          document.querySelector('.demo-container').appendChild(rect);
+          rect.classList.add('rect');
+          rect.style.border = '2px solid ' + color;
+          rect.style.width = w + 'px';
+          rect.style.height = h + 'px';
+          rect.style.left = (img.offsetLeft + x) + 'px';
+          rect.style.top = (img.offsetTop + y) + 'px';
+        };
+      };
+    </script>
+</body>
 </html>
