--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>Snapdragon</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="styles.css">
     <script src="tracking.js"></script>
+    <script src="interact.js"></script>
   </head>
   
   <body>
+	<header>
+		<h1>Snapdragon</h1>
+		<p><b>Snap</b> a photo, <b>drag</b> its objects around.</p>
+	</header>
+
     <section id="snap">
-      <button id="upload">Upload Photo</button>
-      <button id="camera">Take Photo</button>
+      <button id="upload" class="button-primary">Upload Photo</button>
+      <button id="camera" class="button-primary">Take Photo</button>
     </section>
 
     <section id="track">
