--- a/index.html
+++ b/index.html
@@ -1,142 +1,166 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="skeleton.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="tracking.js"></script>
-    <script src="interact.js"></script>
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Snapdragon | Snap photos and drag to rearrange</title>
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel="stylesheet" href="skeleton.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-  <body>
-    <header>
-      <h1>Snapdragon</h1>
-      <p><b>Snap</b> a photo, <b>drag</b> its objects around.</p>
-    </header>
+    <body>
+        <header>
+            <img id="logo" src="logo.png" alt="Snapdragon logo">
+            <h1>Snapdragon</h1>
+            <p><b>Snap</b> a photo, <b>drag</b> its objects around.</p>
+            <a onclick="toggle('about');" style="display: block;"><b>Why?</b></a>
+            <div id="about">
+                <p>Sticky notes are great for brainstorming and getting creative, but what do you do with them afterward? Throw them away? What if you want to keep reorganizing them after the meeting or session?</p>
+                <p>Snapdragon allows you to "snap" a photo and "drag" its objects around.</p>
+                <p>With an elegant web and mobile interface, Snapdragon digitizes your ideas in seconds by using computer vision algorithms. The possibilities are endless, and you can easily save your rearranged image.</p>
+            </div>
+        </header>
 
-    <section id="snap">
-      <input type="file" id="file" name="file" class="inputfile" onchange="previewFile()">
-      <label for="file" class="button-primary">Upload Photo</label>
+        <section id="app">
+            <section id="snap">
+                <input type="file" id="file" name="file" class="inputfile" onchange="upload();">
+                <label for="file" id="upload" class="button-primary">Upload</label><br><div id="check1"> ✔️</div>
+            </section>
 
-      <button id="camera" class="button-primary">Take Photo</button>
-    </section>
+            <section id="track">
+                <img src="" id="img">
+                <button id="process" class="button-primary" onclick="process();">Process</button><div id="check2"> ✔️</div>
+            </section>
+        </section>
 
-	<section id="track">
-      <img src="" alt="" id="img">
-      <button id="track" class="button-primary" onclick="trackPhoto();">Process Photo</button>		
-	</section>
+        <section id="drag">
+        </section>
 
-    <section id="drag">
-    </section>
+        <button id="save" class="button-primary" onclick="save();">Save</button><div id="check3"> ✔️</div>
 
-    <script>
-    function previewFile(){
-      var preview = document.querySelector('img');
-      var file    = document.querySelector('input[type=file]').files[0];
-      var reader  = new FileReader();
+        <footer>
+            <p>Made by <a href="http://katherinehuang.co">Katherine Huang</a> at <a href="http://mahacks.com">MAHacks</a> June 2017.</p>
+        </footer>
 
-      reader.onloadend = function () {
-         preview.src = reader.result;
-      }
+        <script src="tracking.js"></script>
+        <script src="interact.js"></script>
+        <script src="html2canvas.js"></script>
+        <script src="canvas2image.js"></script>
+        <script>
+            function toggle(id) {
+                var element = document.getElementById(id);
+                
+                if (element.style.opacity != '0') {
+                    console.log('opacity is not 0');
+                    element.style.opacity = '0';
+                    element.style.height = '0';
+                } else if (element.style.opacity === '0') {
+                    element.style.opacity = '1';
+                    element.style.height = 'auto';
+                }
+            }
+            
+            function upload() {
+                var preview = document.getElementById('img');
+                var file    = document.querySelector('input[type=file]').files[0];
+                var reader  = new FileReader();
 
-      if (file) {
-         reader.readAsDataURL(file);
-         trackPhoto();
-      } else {
-         preview.src = "";
-      }
-    }
+                reader.onloadend = function () {
+                    preview.src = reader.result;
+                }
 
-    previewFile();
+                if (file) {
+                    reader.readAsDataURL(file);
+                    document.getElementById('process').style.display = "block";
+                    toggle('check1');
+                    toggle('check1');
+                } else {
+                    preview.src = "";
+                }
+            }
 
-    function trackPhoto() {
-      var img = document.getElementById('img');
-      var demoContainer = document.querySelector('#drag');
+            upload();
 
-      tracking.ColorTracker.registerColor('green', function(r,g,b) {
-      	if (r < 150 && g > 150 && b < 200) {
-      		return true;
-      	}	
-      	return false;
-      });
+            function process() {
+                var img = document.getElementById('img');
+                var demoContainer = document.querySelector('#drag');
 
-      var tracker = new tracking.ColorTracker(['magenta', 'cyan', 'yellow', 'green']);
+                document.getElementById('save').style.display = "block";
+                toggle('check2');
 
-      tracker.on('track', function(event) {
-        event.data.forEach(function(rect) {
-          window.plot(rect.x, rect.y, rect.width, rect.height, rect.color);
-        });
-      });
+                tracking.ColorTracker.registerColor('green', function(r,g,b) {
+                    if (r < 150 && g > 150 && b < 200) {
+                        return true;
+                    }
+                    return false;
+                });
 
-      tracking.track('#img', tracker);
+                var tracker = new tracking.ColorTracker(['magenta', 'cyan', 'yellow', 'green']);
 
-      window.plot = function(x, y, w, h, color) {
-        var rect = document.createElement('div');
-        document.querySelector('#track').appendChild(rect);
-        rect.classList.add('rect');
-        rect.style.border = '2px solid ' + color;
-        rect.style.width = w + 'px';
-        rect.style.height = h + 'px';
-        rect.style.left = (img.offsetLeft + x) + 'px';
-        rect.style.top = (img.offsetTop + y) + 'px';
+                tracker.on('track', function(event) {
+                    event.data.forEach(function(rect) {
+                        window.plot(rect.x, rect.y, rect.width, rect.height, rect.color);
+                    });
+                });
 
-        var duplicate = document.createElement('div');
-        document.querySelector('#drag').appendChild(duplicate);
-        duplicate.classList.add('draggable');
-        duplicate.style.backgroundImage = "url(" + img.src + ")";
-        duplicate.style.backgroundPosition = "-" +  x + "px -" + y  + "px";
-        duplicate.style.height = h + 'px';
-        duplicate.style.width = w + 'px';
-      };
-    }
+                tracking.track('#img', tracker);
 
-    interact('.draggable')
-	  .draggable({
-	    // enable inertial throwing
-	    inertia: true,
-	    // keep the element within the area of it's parent
-	    restrict: {
-	      restriction: "parent",
-	      endOnly: true,
-	      elementRect: { top: 0, left: 0, bottom: 1, right: 1 }
-	    },
-	    // enable autoScroll
-	    autoScroll: true,
+                window.plot = function(x, y, w, h, color) {
+                    var rect = document.createElement('div');
+                    document.querySelector('#track').appendChild(rect);
+                    rect.classList.add('rect');
+                    rect.style.border = '2px solid ' + color;
+                    rect.style.width = w + 'px';
+                    rect.style.height = h + 'px';
+                    rect.style.left = (img.offsetLeft + x) + 'px';
+                    rect.style.top = (img.offsetTop + y) + 'px';
 
-	    // call this function on every dragmove event
-	    onmove: dragMoveListener,
-	    // call this function on every dragend event
-	    onend: function (event) {
-	      var textEl = event.target.querySelector('p');
+                    var duplicate = document.createElement('div');
+                    document.querySelector('#drag').appendChild(duplicate);
+                    duplicate.classList.add('draggable');
+                    duplicate.style.backgroundImage = "url(" + img.src + ")";
+                    duplicate.style.backgroundPosition = "-" +  x + "px -" + y  + "px";
+                    duplicate.style.height = h + 'px';
+                    duplicate.style.width = w + 'px';
+                };
+            }
 
-	      textEl && (textEl.textContent =
-	        'moved a distance of '
-	        + (Math.sqrt(event.dx * event.dx +
-	                     event.dy * event.dy)|0) + 'px');
-	    }
-	  });
+            interact('.draggable').draggable({
+                inertia: true,
+                restrict: {
+                    restriction: "parent",
+                    endOnly: true,
+                    elementRect: { top: 0, left: 0, bottom: 1, right: 1 }
+                },
+                autoScroll: true,
+                onmove: dragMoveListener
+            });
 
-	  function dragMoveListener (event) {
-	    var target = event.target,
-	        // keep the dragged position in the data-x/data-y attributes
-	        x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx,
-	        y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy;
+            function dragMoveListener (event) {
+                var target = event.target,
+                    x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx,
+                    y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy;
 
-	    // translate the element
-	    target.style.webkitTransform =
-	    target.style.transform =
-	      'translate(' + x + 'px, ' + y + 'px)';
+                target.style.webkitTransform =
+                target.style.transform =
+                'translate(' + x + 'px, ' + y + 'px)';
 
-	    // update the posiion attributes
-	    target.setAttribute('data-x', x);
-	    target.setAttribute('data-y', y);
-	  }
+                target.setAttribute('data-x', x);
+                target.setAttribute('data-y', y);
+            }
 
-	  // this is used later in the resizing and gesture demos
-	  window.dragMoveListener = dragMoveListener;
-    </script>
-  </body>
+            window.dragMoveListener = dragMoveListener;
+
+            function save() {
+                toggle('check3');
+                html2canvas(document.getElementById('drag'), {
+                    onrendered: function (canvas) {
+                        Canvas2Image.saveAsPNG(canvas);
+                        // TODO: downloaded file extension
+                    }
+                })
+            }
+        </script>
+    </body>
 </html>
